# synth-gui

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  sound.cpp  sound.h  synth.cpp  synth.h
